--- a/test_qss/stylesheet.qss
+++ b/test_qss/stylesheet.qss
@@ -1,3 +1,4 @@
+/*
 QPushButton {
     background-color: rgb(70,70,70);
     color: white;
@@ -17,3 +18,4 @@ QPushButton:hover {
     color: white;
     border: 2px solid red;
     }
+*/
